--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -444,42 +444,26 @@ img {
     
                     <div class="nav__list">
                         <div class="nav__items">
-
-                            <a href="{% url 'upload_students' %}" class="nav__link">
+                           <a href="{% url 'upload_faculty' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Students</span>
+                                <span class="nav__name">Upload Faculty</span>
                             </a>
-
-                            <a href="{% url 'upload_teachersload' %}" class="nav__link">
-                                <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Teachers Load</span>
-                            </a>
-
-                            <a href="{% url 'upload_subject_offered' %}" class="nav__link">
-                                <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Subject Offered</span>
-                            </a>
-
-                          
-
                             <a href="{% url 'upload_facultyload' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
                                 <span class="nav__name">Upload Faculty Load</span>
                             </a>
 
-                         
-                            <a href="{% url 'upload_counselor' %}" class="nav__link">
+                            <a href="{% url 'upload_students' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Counselor</span>
+                                <span class="nav__name">Upload Students</span>
                             </a>
-                            <a href="{% url 'upload_CounselorSchedule' %}" class="nav__link">
-                                <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Counselor Schedule</span>
-                            </a>
-                             <a href="{% url 'upload_studentsload' %}" class="nav__link">
+                            <a href="{% url 'upload_studentsload' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
                                 <span class="nav__name">Upload Students load</span>
                             </a>
+
+                           
+                             
                         </div>
     
 
