--- a/templates/uploaddb/uploaddb_home.html
+++ b/templates/uploaddb/uploaddb_home.html
@@ -445,40 +445,50 @@ img {
                     <div class="nav__list">
                         <div class="nav__items">
 
-                            <a href="{% url 'upload_students' %}" class="nav__link">
+                            <a href="{% url 'uploaddb_schooloffices' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Students</span>
+                                <span class="nav__name">Upload School Offices</span>
                             </a>
 
-                            <a href="{% url 'upload_teachersload' %}" class="nav__link">
+                            <a href="{% url 'uploaddb_department' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Teachers Load</span>
+                                <span class="nav__name">Upload Department</span>
                             </a>
 
-                            <a href="{% url 'upload_subject_offered' %}" class="nav__link">
+                            <a href="{% url 'uploaddb_degreeprogram' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Subject Offered</span>
+                                <span class="nav__name">Upload Degree Program</span>
                             </a>
 
                           
 
-                            <a href="{% url 'upload_facultyload' %}" class="nav__link">
+                            <a href="{% url 'uploaddb_allstudents' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Faculty Load</span>
+                                <span class="nav__name">Upload All Students</span>
                             </a>
 
                          
-                            <a href="{% url 'upload_counselor' %}" class="nav__link">
+                            <a href="{% url 'uploaddb_allfaculty' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Counselor</span>
+                                <span class="nav__name">Upload All Faculty</span>
                             </a>
-                            <a href="{% url 'upload_CounselorSchedule' %}" class="nav__link">
+                            <a href="{% url 'uploaddb_allsubjects' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Counselor Schedule</span>
+                                <span class="nav__name">Upload All Subjects</span>
                             </a>
-                             <a href="{% url 'upload_studentsload' %}" class="nav__link">
+                             <a href="{% url 'uploaddb_semester' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Students load</span>
+                                <span class="nav__name">Upload Semester</span>
+                            </a>
+
+                            <a href="{% url 'uploaddb_newoffercode' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload New Offer Code</span>
+                            </a>
+
+                            <a href="{% url 'uploaddb_offercode' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Offer Code</span>
                             </a>
                         </div>
     
