--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -455,7 +455,7 @@ img {
 
                             <a href="{% url 'upload_students' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Students</span>
+                                <span class="nav__name">Upload Student</span>
                             </a>
                             <a href="{% url 'upload_studentsload' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
