--- a/templates/admin/upload_faculty.html
+++ b/templates/admin/upload_faculty.html
@@ -1,12 +1,18 @@
 {% extends "admin/admin_home.html" %}
-{% block title %} Upload Students Schedule{% endblock %}
+{% block title %} Upload Faculty {% endblock %}
 {% block content %}
  
-<h1>Upload Students Schedule</h1> <br>
+<h1>Upload Faculty</h1> <br>
  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <input type="file" name="myfile">
     <button type="submit">Upload</button>
   </form>
+
+      {% for message in messages %}
+				<br>
+                    <center> <p>{{message}}</p> </center>
+                {% endfor %}
+                
 
   {% endblock %}
