--- a/templates/uploaddb/uploaddb_offercode.html
+++ b/templates/uploaddb/uploaddb_offercode.html
@@ -1,8 +1,8 @@
 {% extends "uploaddb/uploaddb_home.html" %}
-{% block title %} Upload Offer Code {% endblock %}
+{% block title %} Upload New Offer Code {% endblock %}
 {% block content %}
  
-<h1>Upload Offer Code </h1> <br>
+<h1>Upload New Offer Code </h1> <br>
  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <input type="file" name="myfile">
