--- a/templates/uploaddb/uploaddb_home.html
+++ b/templates/uploaddb/uploaddb_home.html
@@ -477,7 +477,11 @@ img {
 
                             <a href="{% url 'uploaddb_offercode' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">UploadOffer Code</span>
+                                <span class="nav__name">Upload Offer Code</span>
+                            </a>
+                              <a href="{% url 'uploaddb_time' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Time</span>
                             </a>
 
                         </div>
