--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -769,9 +769,9 @@ p{
             </div>
         </div>
 
-      <form method="POST" action="">
+      <!-- <form method="POST" action="">
 				{% csrf_token %}
-            <!-- <div class="header__search">
+            <div class="header__search">
          <input type="search" name="search" placeholder="Search" class="header__input">
         <i class='bx bx-search header__icon'></i>
      </div> -->
@@ -780,10 +780,10 @@ p{
          <i class='bx bx-menu' id="header-toggle"></i>
      </div> -->
 
-       {% for message in messages %}
+       <!-- {% for message in messages %}
 					   <center> <p>{{message}}</p> </center>
 				   {% endfor %}
-      </form> 
+      </form>  -->
       <br>
       <!-- <div class="container"> -->
       <div class="cards" >
@@ -809,7 +809,6 @@ p{
                 {% endfor %} 
                   {% endblock %}
                   </div>
-                  <!-- </div> -->
                   <br>
                    <br>
      
