--- a/templates/uploaddb/uploaddb_home.html
+++ b/templates/uploaddb/uploaddb_home.html
@@ -466,6 +466,10 @@ img {
                                 <i class='bx bx-layer nav__icon' ></i>
                                 <span class="nav__name">Upload All Faculty</span>
                             </a>
+                             <a href="{% url 'uploaddb_offercode' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Offer Code</span>
+                            </a>
                             <a href="{% url 'uploaddb_allsubjects' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
                                 <span class="nav__name">Upload All Subjects</span>
@@ -475,15 +479,17 @@ img {
                                 <span class="nav__name">Upload Semester</span>
                             </a>
 
-                            <a href="{% url 'uploaddb_offercode' %}" class="nav__link">
-                                <i class='bx bx-layer nav__icon' ></i>
-                                <span class="nav__name">Upload Offer Code</span>
-                            </a>
+
+                           
                               <a href="{% url 'uploaddb_time' %}" class="nav__link">
                                 <i class='bx bx-layer nav__icon' ></i>
                                 <span class="nav__name">Upload Time</span>
                             </a>
 
+                              <a href="{% url 'uploaddb_counselor' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">Upload Counselor</span>
+                            </a>
                         </div>
     
 
