--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -7,7 +7,7 @@ Notification_Detail
 {% block content %} 
 
 
-    {% for object in object %}
+    {% for object in object_list %}
         <br>
    
       
