--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="style.css"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 </head>
 <style>
 	@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
@@ -14,7 +15,7 @@
 
 	body {
 		background: #d8c090;
-		background: -webkit-linear-gradient(to right, #98b4ac,#d8c090,);
+		background: -webkit-linear-gradient(to right, #98b4ac, #d8c090, );
 		background: linear-gradient(to left, #d8c090, #98b4ac);
 		/* background: -webkit-linear-gradient(to right, #98b4ac, #d8c090);
 	background: linear-gradient(to right, #d8c090, #98b4ac); */
@@ -193,7 +194,7 @@
 
 	.login_btn {
 		width: 100%;
-		background: #48444c!important;
+		background: #48444c !important;
 		color: white !important;
 	}
 
@@ -233,8 +234,19 @@
 		width: 400px;
 		height: 300px;
 		margin-bottom: 40px;
-      /* margin-right: 90px;
+		/* margin-right: 90px;
       margin-left: 90px; */
+	}
+
+	.login_btn {
+		width: 60%;
+		background: #48444c !important;
+		color: white !important;
+	}
+
+	.login_btn:focus {
+		box-shadow: none !important;
+		outline: 0px !important;
 	}
 </style>
 
@@ -242,22 +254,57 @@
 
 	<div class="container" id="container">
 		<div class="form-container log-in-container">
-			<form method="POST" action="">
+			<form method="POST" action="#">
 				{% csrf_token %}
-				<h2>Welcome to Follow App</h2>
-				<br>
-				<input type="text" name="username" placeholder="ID Number" class="form-control">
-				<input type="password" name="password" placeholder="Password" class="form-control">
-				<br> 
-				<button class="btn login_btn" type="submit">Log In</button>
-				{% for message in messages %}
-				<br>
-                    <center> <p>{{message}}</p> </center>
-                {% endfor %}
-				<a href="{% url 'register' %}" class="ml-2">Don't have an account? <b>Sign Up</b> </a>
+				<h2>Register Account</h2>
+				<div>
+					{{form.username}}
+				</div>
+
+				<div>
+					{{form.password1}}
+				</div>
+				<div>
+					{{form.password2}}
+				</div>
+				<!-- <div class="input-group mb-3">
+					<div class="input-group-append">
+						<span class="input-group-text"><i class="fas fa-user"></i></span>
+					</div>
+					{{form.username}}
+				</div> -->
+
+				<!-- <div class="d-flex justify-content-center mt-3 login_container">
+					 <input class="btn login_btn" type="submit" value="Register Account">
+				   </div> -->
+				   {% for message in messages %}
+				 
+					   <center> <p>{{message}}</p> </center>
+				   {% endfor %}
+				   <br>
+			
+				<button class="btn login_btn" type="submit">Register Account</button>
+				
 			</form>
 
+
 		</div>
+		<script>
+			/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+//We start indexing at one because CSRF_token is considered and input field 
+*/
+
+			//Query All input fields
+			var form_fields = document.getElementsByTagName('input')
+			form_fields[1].placeholder = 'ID Number';
+			form_fields[2].placeholder = 'New Password';
+			form_fields[3].placeholder = 'Confirm Password';
+
+
+			for (var field in form_fields) {
+				form_fields[field].className += 'form-control'
+			}
+		</script>
 		<div class="overlay-container"
 			style="background-image: url(https://media.macphun.com/img/uploads/customer/how-to/579/15531840725c93b5489d84e9.43781620.jpg?q=85&w=1340);">
 			<div class="overlay">
@@ -266,7 +313,7 @@
 
 					<img
 						src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-				
+
 				</div>
 			</div>
 
