--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -511,10 +511,10 @@ textarea{
    display: inline-block;
    text-align: left;
 }
-
+/* // ARI SA WEBKIT MAKITA ANG PARA SCROLL HIDDEN BA OR DI */
 ::-webkit-scrollbar {
 
-  display: none;
+ display: none;
 }
 
 ::-webkit-scrollbar-track {
@@ -694,7 +694,7 @@ p{
                
  
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold; margin-right: 515px;"href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
+                <a style="font-weight: bold; margin-right: auto;"href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
              
 
                 <div>
