--- a/templates/admin/upload_studentsload.html
+++ b/templates/admin/upload_studentsload.html
@@ -1,17 +1,39 @@
 {% extends "admin/admin_home.html" %}
 {% block title %} Upload Students Load {% endblock %}
 {% block content %}
- 
-<h1>Upload Students Load</h1> <br>
- <form method="post" enctype="multipart/form-data">
+<br>
+<style>
+.faculty{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 50%;
+  height: 300px;
+  border-radius: 5px;
+  background-color: #E3E4FA;
+  float: center;
+  margin-top: 10px;
+  margin-bottom: 35px;
+  margin-right: 500px;
+  margin-left: 300px; 
+  text-align: center;
+   line-height: 40px; 
+}
+</style>
+<div class="faculty">
+
+<h1 style="text-align: left; margin-left: 10px; ">Upload Students Load</h1>
+      {% for message in messages %}
+                    <center> <p>{{message}}</p> </center>
+                {% endfor %}
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <input type="file" name="myfile">
     <button type="submit">Upload</button>
   </form>
 
-     {% for message in messages %}
-				<br>
-                    <center> <p>{{message}}</p> </center>
-                {% endfor %}
+
+                
+</div>
+
 
   {% endblock %}
