--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -361,13 +361,11 @@ img {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 102%;
-  height: 800px;
+  min-height: 530px;
   border-radius: 5px;
   background-color: var(--card-color); 
   float: center;
-  margin-top: 10px;
-  margin-bottom: 35px;
-  margin-right: 500px;
+margin: auto;
   /* margin-left: 80px;  */
   text-align: center;
   overflow-x: scroll;
@@ -535,6 +533,31 @@ th, td {
   text-align: center;  
 
 }
+.nav__container::-webkit-scrollbar {
+  display: none;
+}
+::-webkit-scrollbar {
+
+  display: none;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
 
 
         </style>
@@ -543,19 +566,20 @@ th, td {
     </head>
     <body>
         <!--========== HEADER ==========-->
-        <header class="header">
+    <header class="header">
             <div class="header__container">
-                <!-- <img src="assets/img/logo3.png" alt="" class="header__img"> -->
                
+ 
+                <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
+                <a style="font-weight: bold; margin-right:  auto;" href="{% url 'counselor_home_view' %}"  class="header__logo">FOLLOW APP</a>
+             
 
-                <a href="{% url 'counselor_home_view' %}" class="header__logo">FOLLOW APP</a>
-                 <div>
-                        {% for object in form %} 
-                              <p> {{object.firstname }} {{object.lastname }} </p>
+                <div>
+                {% for object in form %} 
+                              <p style="font-weight: bold;"> {{object.firstname }} {{object.lastname }} </p>
                                    {% endfor %} 
                                    </div>
-               
-            </div>
+              </div>
         </header>
 
         <!--========== NAV ==========-->
@@ -625,6 +649,14 @@ th, td {
                 <div class="card1">
            <br>           
            {% block content %} 
+           <img style="max-width: 900px;
+  height: 480px; margin: auto;" 
+  src="https://images.squarespace-cdn.com/content/v1/5d4d4ff6d36bb3000114e21b/1605656934068-72QC0O69NZXE052L0MB4/online-ocunselling-complete-guide-smaller.jpg"  
+ >
+            <img style="max-width: 900px;
+  height: 480px; margin: auto;" 
+  src="https://media.womensweekly.com.sg/public/2021/08/online-counselling-singapore-1.jpg"  
+ >
            {% endblock %}
          </div>
                </section>
