--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -5,30 +5,179 @@ Notification_Detail
 {% endblock %} 
 
 {% block content %} 
-
-
-    {% for object in object_list %}
-        <br>
-   
+<style>
+       .card{
+      display: flex;
+      padding: 20px;
+      max-width: 408px;
+   padding-left: 5px;
+      height: 210px;
+      margin: 20px;
+      border-radius: 10px;
+      background-color: #98adb4;
+      box-shadow:
+        0 9px 33px rgba(0, 0, 0, 0.07);
+      overflow-y: scroll;
+      float: left;
+      flex-wrap: row;
+      margin-left: 140px;
+      align-items: stretch;
+     
       
-        <caption><h3><b>Full Details</b></h3><caption></caption>
-        <div class="detailsCard">
-  <br>
-    <table style="width:90%">
-  <tr>
-    <th style="width:50%">Subject</th>
-    <td>{{object.subject_referred}}</td>
-  </tr>
-   <tr>
-    <th style="width:50%">Reasons</th>
-    <td>{{object.reasons}}</td>
-  </tr>
+      
+      
+    }
+.txtFont{
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  text-align:left; margin-right: 30px; 
+  display: flex;
+  font-size: 17px;
+  text-overflow: ellipsis;
+  align-items: start;
+}
+.txtFonty{
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  text-align:left; 
+  display: flex;
+  font-size: 17px; margin-left: 10px;
+  text-overflow: ellipsis;
+  margin-top: 8px;
+  align-items: center;
+  /* justify-content: center; */
+}
+/* === TABLE ==== */
+.table-box
+{
+    margin: 50px auto;
+}
+
+.table-row{
+    display: table;
+    width: 40%;
+    margin: 10px auto;
+    font-family: sans-serif;
+    background: transparent;
+    padding: 4px 0;
+    color: #555;
+    font-size: 13px;
+    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+    height: 0.1%;
+    border-radius: 20px;
+    
+}
+.table-head{
   
-</table>
+    background: #E5E4E2;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+    height: 20px;
+    line-height: 5px;
+    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+ 
+}
+.table-head .table-cell{
+    border-right: none;
+}
+.table-cell{
+    display: table-cell;
+    width: 20%;
+    text-align: center;
+    padding: 4px 0;
+    border-right: 1px solid #d8c090;
+    vertical-align: middle;
+    
+}
+.first-cell{
+    text-align: left;
+    padding-left: 10px;
+    width: 10%;
+}
+
+.last-cell{
+    border-right: none;
+    width: 10%;
+}
+/* a{
+    text-decoration: none;
+    color: #555;
+} */
+p{
+  font-size: 17px;
+  color: black;
+}
+.listTitle{
+  font-size: 20px;
+  text-align: center;
+}
+@media only screen and (max-width: 600px) {
+  .table-row {
+    font-size: 11px;
+  }
+}
+.trow-list{
+      display: table;
+    width: 85%;
+    margin: 10px auto;
+    font-family: sans-serif;
+    background: #E3E4FA;
+    padding: 4px 0;
+    color: #d8c090;
+    font-size: 15px;
+    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+    line-height: 5px;
+    
+}
+.container{
+  border-radius: 10px;
+      background-color: #B4CFEC;
+      box-shadow:
+        0 9px 33px rgba(0, 0, 0, 0.07);
+  width: 800px;
+  min-height: auto;
+  float: center;
+  margin-left: 220px;
+  
+}
+.center {
+  margin-left: auto;
+  margin-right: 100px;
+}
+</style>
+
+
+<div class="table-row table-head">
+    <div class="table-cell first-cell">
+        <p class="listTitle">Full Details</p>
+    </div>
 </div>
+<br>
+            <div class="container">
+{% for object in object_list %}
+<TABLE class="center">
+    <br>
+<TR>
+<TD><label class="txtFont" style="text-align: center; margin-right: auto; font-size: 120%"><b>Subject:</b></label></TD>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.subject_referred}}</b></label></TD>
 
 
-    {% endfor %} 
+</TR>
+<TR>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>Reasons:</b></label></TD>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.reasons}}</b></label></TD>
+
+
+</TR>
+
+
+
+
+</TABLE>
+{% endfor %} 
+ </div>
+
 {% endblock %}
 
     
