--- a/templates/student/notification.html
+++ b/templates/student/notification.html
@@ -3,32 +3,197 @@
 Notifications
 {% endblock %} 
 {% block content %}
-    <div >
-        <h1 >Notifications</h1>
+<style>
+       .card{
+      display: flex;
+      padding: 20px;
+      max-width: 408px;
+   padding-left: 5px;
+      height: 210px;
+      margin: 20px;
+      border-radius: 10px;
+      background-color: #98adb4;
+      box-shadow:
+        0 9px 33px rgba(0, 0, 0, 0.07);
+      overflow-y: scroll;
+      float: left;
+      flex-wrap: row;
+      margin-left: 140px;
+      align-items: stretch;
+     
+      
+      
+      
+    }
+.txtFont{
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  text-align:left; margin-right: 30px; 
+  display: flex;
+  font-size: 17px;
+  text-overflow: ellipsis;
+  align-items: start;
+}
+.txtFonty{
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  text-align:left; 
+  display: flex;
+  font-size: 17px; margin-left: 10px;
+  text-overflow: ellipsis;
+  margin-top: 8px;
+  align-items: center;
+  /* justify-content: center; */
+}
+/* === TABLE ==== */
+.table-box
+{
+    margin: 15px auto;
+    
+}
 
-        {% if not notifications %}
-            No notifications yet!
-        {% endif %}
+.table-row{
+    display: table;
+    width: 40%;
+    margin: 10px auto;
+    font-family: sans-serif;
+    background: transparent;
+    padding: 4px 0;
+    color: #555;
+    font-size: 13px;
+    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+    height: 0.1%;
+    border-radius: 20px;
+    
+}
+.table-head{
+  
+    background: #E5E4E2;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+    height: 20px;
+    line-height: 5px;
+    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+    justify-content: left;
+    margin: auto;
+ 
+}
+.table-head .table-cell{
+    border-right: none;
+}
+.table-cell{
+    display: table-cell;
+    width: 3.33%;
+    text-align: center;
+    padding: 4px 0;
+    border-right: 1px solid #d8c090;
+    vertical-align: middle;
+    
+}
+.first-cell{
+    text-align: left;
+    padding-left: 10px;
+    width: 10%;
+}
 
-        {% for notification in notifications reversed %}
-   
-            <div class = 'notifCard'>
-                
-                <p>
-                    {% if notification.notification_type == 'automatic_referral' %}
-                        <a href="{% url 'student_notif_detail' notification.extra_id %}">
-                            <strong>{{ notification.created_by.username }}</strong> automatik referral<br>
-                            <small>{{ notification.created_at|timesince }} ago</small>
-                             </a>
-                       
-                    {% elif notification.notification_type == 'manual_referral' %}
-                        <a href="{% url 'student_notif_detail' notification.id %}">
-                             manual referral<br>
-                            <small>{{ notification.created_at|timesince }} ago</small>
-                        </a>
-                    {% endif %}
-                </p>
-            </div>
-        {% endfor %}
-    </div>
+.last-cell{
+    border-right: none;
+    width: 10%;
+}
+/* a{
+    text-decoration: none;
+    color: #555;
+} */
+p{
+  font-size: 17px;
+  color: black;
+}
+.listTitle{
+  font-size: 20px;
+  text-align: center;
+}
+@media only screen and (max-width: 600px) {
+  .table-row {
+    font-size: 11px;
+  }
+}
+.trow-list{
+      display: table;
+    width: 85%;
+    margin: 10px auto;
+    font-family: sans-serif;
+    background: #E3E4FA;
+    padding: 4px 0;
+    color: #d8c090;
+    font-size: 15px;
+    box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+    line-height: 5px;
+}
+    #customers {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 97%;
+    }
+    
+    #customers td, #customers th {
+      border: 1px solid #ddd;
+      padding: 10px;
+    }
+    
+    #customers tr:nth-child(even){background-color: #f2f2f2;}
+    
+    #customers tr:hover {background-color: #ddd;}
+    
+    #customers th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: #E3E4FA;
+      color: white;
+    }
+</style>
+
+<div class="table-row table-head">
+  <div class="table-cell first-cell">
+      <p class="listTitle">Notifications</p>
+  </div>
+</div>
+
+
+
+    {% if not notifications %}
+        No Notifications Yet!
+    {% endif %}
+<br>
+<table id="customers">
+    <tr>
+    <th style="text-align:center; color: black;">Referral</th>
+    <th style="text-align:center; color: black;">Time</th>
+ 
+  </tr>
+{% for notification in notifications reversed %}
+
+  {% if notification.notification_type == 'automatic_referral' %}
+  <a href="#">
+  <tr>
+    
+    <td>  <a href="{% url 'student_notif_detail' notification.extra_id %}"><strong>{{ notification.created_by}}</strong> <b>Automatic Referral</b></td></a>
+    <td> <a href="{% url 'student_notif_detail' notification.extra_id %}"><small>{{ notification.created_at|timesince }} ago</small>></a></td>
+    
+  </tr>
+   </a> {% elif notification.notification_type == 'manual_referral' %}
+
+
+  <tr>
+    <td><a style="color: black;" href="{% url 'student_notif_detail' notification.id %}"><strong>{{ notification.created_by.username }}</strong>  <b style="color: black;">Manual Referral</b></a></td>
+    <td><a style="color: black;" href="{% url 'student_notif_detail' notification.id %}">{{ notification.created_at|timesince }} ago</a></td>
+  </tr>
+
+
+  {% endif %}  
+{% endfor %}
+</table>
 {% endblock %}
+
+
