--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -21,15 +21,19 @@
   --nav-width: 250px;
 
   /*========== Colors ==========*/
-  --first-color: #6923D0;
+ --first-color: #d8c090;
   --first-color-light: #F4F0FA;
   --title-color: #19181B;
   --text-color: #58555E;
+  --navtext-color: #FFFFFF;
   --text-color-light: #A5A1AA;
   --body-color: #E5E4E2;
-  --nav-color: #F9F6FD;
+  --nav-color: #4863A0;
   --container-color: #FFFFFF;
-  --card-color: #F9F6FD;;
+  --card-color: #F9F6FD;
+  --main1-color: #d8c090;
+  --dropdown: #4863A0;
+  --header-color: #FFFFFF;
 
 
   /*========== Font and typography ==========*/
@@ -66,8 +70,7 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
-  overflow-y: hidden;
-  overflow-x: hidden;
+overflow-y: auto;
 }
 
 h3 {
@@ -89,7 +92,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--nav-color);
+  background-color: var(--header-color);
   box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
   padding: 0 1rem;
   z-index: var(--z-fixed);
@@ -117,15 +120,16 @@ img {
 .header__search {
   display: flex;
   padding: .40rem .75rem;
-  background-color: var(--first-color-light);
+  background-color: var(--body-color);
   border-radius: .25rem;
+  margin-left: 15px;
 }
 
 .header__input {
   width: 100%;
   border: none;
   outline: none;
-  background-color: var(--first-color-light);
+  background-color: var(--body-color);
 }
 
 .header__input::placeholder {
@@ -135,7 +139,7 @@ img {
 
 .header__icon, 
 .header__toggle {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .header__toggle {
@@ -150,7 +154,7 @@ img {
   left: -100%;
   height: 100vh;
   padding: 1rem 1rem 0;
-  background-color: var(--container-color);
+  background-color: var(--nav-color);
   box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1);
   z-index: var(--z-fixed);
   transition: .4s;
@@ -169,6 +173,27 @@ img {
 /* For Google Chrome and others */
 .nav__container::-webkit-scrollbar {
   display: none;
+}
+::-webkit-scrollbar {
+
+  display: none;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
 
 .nav__logo {
@@ -199,7 +224,7 @@ img {
 .nav__link {
   display: flex;
   align-items: center;
-  color: var(--text-color);
+  color: var(--navtext-color);
 }
 
 .nav__link:hover {
@@ -229,7 +254,7 @@ img {
 }
 
 .nav__dropdown-collapse {
-  background-color: var(--first-color-light);
+  background-color: var(--main1-color);
   border-radius: .25rem;
   margin-top: 1rem;
 }
@@ -243,18 +268,17 @@ img {
 .nav__dropdown-item {
   font-size: var(--smaller-font-size);
   font-weight: var(--font-medium);
-  color: var(--text-color);
+  color: var(--navtext-color);
 }
 
 .nav__dropdown-item:hover {
-  color: var(--first-color);
+  color: var(--dropdown);
 }
 
 .nav__dropdown-icon {
   margin-left: auto;
   transition: .4s;
 }
-
 /* Show dropdown collapse */
 .nav__dropdown:hover {
   max-height: 100rem;
@@ -372,7 +396,7 @@ img {
   margin-right: 90px;
   margin-left: 25px;
   text-align: center;
-  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .notifCard {
@@ -535,19 +559,21 @@ th, td {
 </style>
     <body>
         <!--========== HEADER ==========-->
-        <header class="header">
-            <div class="header__container">
-                <img src="./assets/img/logo3.png" alt="" class="header__img">
 
-                <a href="{% url 'student_home_view' %}" class="header__logo">FOLLOW APP</a>
-    
-                <div class="header__toggle">
-                    <i class='bx bx-menu' id="header-toggle"></i>
-                </div>
+                <header class="header">
+            <div class="header__container">
+               
+ 
+                <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
+                <a style="font-weight: bold; margin-right:  auto;" href="{% url 'student_home_view' %}"  class="header__logo">FOLLOW APP</a>
+             
+
+                <div>
                 {% for object in form %} 
                               <p style="font-weight: bold;"> {{object.firstname }} {{object.lastname }} </p>
                                    {% endfor %} 
-            </div>
+                                   </div>
+              </div>
         </header>
 
         <!--========== NAV ==========-->
@@ -599,6 +625,11 @@ th, td {
                 <div class="card1">
            <br>
           {% block content %} 
+
+    <img style="max-width: 700px;
+  height: 480px; margin: auto;" 
+  src="https://static.e-counseling.com/wp-content/uploads/2020/04/online-counseling-illustration-750.png"  
+ >
            {% endblock %}
          </div>
                </section>
