--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -171,6 +171,21 @@ p{
 
 </TR>
 
+<TR>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>Date:</b></label></TD>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.date}}</b></label></TD>
+</TR>
+
+<TR>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>Start Session:</b></label></TD>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.start_time}}</b></label></TD>
+</TR>
+
+<TR>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>End Session:</b></label></TD>
+<TD><label class="txtFont" style="text-align:center; margin-right: auto; font-size: 120%"><b>{{object.end_time}}</b></label></TD>
+</TR>
+
 
 
 
