--- a/templates/counselor/modalC.html
+++ b/templates/counselor/modalC.html
@@ -242,6 +242,16 @@ p{
 
 
            {% endfor %}
+
+      
+<!-- <form class="reffer" method="POST" action="">
+    {% csrf_token %}
+  {{form1.feedback}}
+<br>
+  <button class="btn success" style="font-weight: bold;">Submit</button>
+</form> -->
+
+     
                
 {% endblock %}
 
