--- a/templates/counselor/notification.html
+++ b/templates/counselor/notification.html
@@ -163,10 +163,8 @@ p{
   </div>
 </div>
 
-
-<br>
     {% if not notifications %}
-        No Notifications Yet!
+        <h4>No Notifications Yet!</h4>
     {% endif %}
 
 <table id="customers">
