--- a/templates/director/form.html
+++ b/templates/director/form.html
@@ -219,15 +219,15 @@ p{
 
 <TR>
 <TD><label class="txtFont" style="text-align:left; margin-right: 90px; font-size: 18px"><b>First Name:</b></label></TD>
-<TD>{{form.firstname}}</TD>
+<TD>{{form1.firstname}}</TD>
 </TR>
 <TR>
 <TD><label class="txtFont" style="text-align:left; margin-right: 93px; font-size: 18px"><b>Last Name:</b></label></TD>
-<TD>{{form.lastname}}</TD>
+<TD>{{form1.lastname}}</TD>
 </TR>
 <TR>
 <TD><label class="txtFont" style="text-align:left; margin-right: 12px; font-size: 18px"><b>Program Distination:</b></label></TD>
-<TD>{{form.program_designation}}</TD>
+<TD>{{form1.program_designation}}</TD>
 </TR>
 
 </TABLE>
