--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -610,8 +610,8 @@ th, td {
                                 <div class="nav__dropdown-collapse">
                                     <div class="nav__dropdown-content">
                                         <a href="{% url 'counselor_view_referred_students' %}" class="nav__dropdown-item">List of Referrals</a>
-                                        <a href="#refU" class="nav__dropdown-item">List of Pending Referrals</a>
-                                    </div>
+                                        <a href="{% url 'counselor_view_pending_students' %}" class="nav__dropdown-item">List of Pending Referrals</a>
+                                    </div>  
                                 </div>
                             </div>
 
