--- a/templates/counselor/pending_students.html
+++ b/templates/counselor/pending_students.html
@@ -136,7 +136,7 @@ p{
 
                             <div class="table-row table-head">
             <div class="table-cell first-cell">
-                <p class="listTitle">List of Referred Students</p>
+                <p class="listTitle">List of Pending Referred Students</p>
             </div>
         </div>
         <br>
