--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -716,9 +716,9 @@ p{
                                 <span class="nav__name">Home</span>
                             </a>
 
-                            <a href="#notif" class="nav__link">
+                            <a href="{% url 'notifications_teacher' %}" class="nav__link">
                                 <i class='bx bx-bell nav__icon' ></i>
-                                <span class="nav__name">Notifications</span>
+                                <span class="nav__name">Notifications {{notif2}}</span>
                             </a>
                             
                             
